@startuml

title __FORTH's Class Diagram__\n

  namespace gamesource {
    namespace State {
      namespace CharacterState {
        namespace enemies {
          namespace forth {
            class gamesource.State.CharacterState.enemies.forth.Boss {
                - animChannel : AnimChannel
                - animControl : AnimControl
                - app : SimpleApplication
                - bip001 : Node
                - bullet : BulletAppState
                - capsuleShape : CapsuleCollisionShape
                - character : Node
                - height : float
                - modelY : float
                - physics : PhysicsSpace
                - place : Vector3f
                - radius : float
                - rootNode : Node
                - rotateX : float
                - rotateY : float
                - rotateZ : float
                - scene : Node
                - ske : BoundingVolume
                - skeleton : Spatial
                - skeletonControl : CharacterControl
                - stepHeight : float
                + Boss()
                + Boss()
                + Boss()
                + get()
                + initModel()
                + initPhysics()
                # cleanup()
                # initialize()
                # onDisable()
                # onEnable()
            }
          }
        }
      }
    }
  }
  

  namespace gamesource {
    namespace State {
      namespace CharacterState {
        namespace enemies {
          namespace forth {
            class gamesource.State.CharacterState.enemies.forth.BossKnight {
                - animChannel : AnimChannel
                - animControl : AnimControl
                - app : SimpleApplication
                - bip001 : Node
                - bullet : BulletAppState
                - capsuleShape : CapsuleCollisionShape
                - character : Node
                - height : float
                - modelY : float
                - physics : PhysicsSpace
                - place : Vector3f
                - radius : float
                - rootNode : Node
                - rotateX : float
                - rotateY : float
                - rotateZ : float
                - scene : Node
                - ske : BoundingVolume
                - skeleton : Spatial
                - skeletonControl : CharacterControl
                - stepHeight : float
                + BossKnight()
                + BossKnight()
                + BossKnight()
                + get()
                + initModel()
                + initPhysics()
                # cleanup()
                # initialize()
                # onDisable()
                # onEnable()
            }
          }
        }
      }
    }
  }
  

  namespace gamesource {
    namespace State {
      namespace CharacterState {
        namespace enemies {
          namespace forth {
            class gamesource.State.CharacterState.enemies.forth.StoneMan {
                - anim : String
                - animChannel : AnimChannel
                - animControl : AnimControl
                - app : SimpleApplication
                - bip001 : Node
                - bullet : BulletAppState
                - capsuleShape : CapsuleCollisionShape
                - character : Node
                - height : float
                - model : int
                - modelY : float
                - physics : PhysicsSpace
                - place : Vector3f
                - plane : BoundingVolume
                - radius : float
                - robot : Spatial
                - robotControl : CharacterControl
                - rootNode : Node
                - rotateX : float
                - rotateY : float
                - rotateZ : float
                - scene : Node
                - stepHeight : float
                - timer : float
                - type : int
                + StoneMan()
                + StoneMan()
                + StoneMan()
                + StoneMan()
                + get()
                + initAnim()
                + initModel()
                + initPhysics()
                + update()
                # cleanup()
                # initialize()
                # onDisable()
                # onEnable()
            }
          }
        }
      }
    }
  }
  

  gamesource.State.CharacterState.enemies.forth.Boss -up-|> com.jme3.app.state.BaseAppState
  gamesource.State.CharacterState.enemies.forth.BossKnight -up-|> com.jme3.app.state.BaseAppState
  gamesource.State.CharacterState.enemies.forth.StoneMan -up-|> com.jme3.app.state.BaseAppState




@enduml
